EL-5446 fix rule hovers visibility

--- a/src/components/FlowManagment/FlowChart/Nodes/style.module.scss
+++ b/src/components/FlowManagment/FlowChart/Nodes/style.module.scss
@@ -85,12 +85,16 @@
   position: relative;
   cursor: default;
 
+  &:hover &__content {
+    visibility: visible;
+  }
+
   &__content {
     display: flex;
     align-items: center;
     position: absolute;
     top: 4px;
-    left: 107%;
+    left: 110%;
     z-index: 50;
     visibility: hidden;
     height: 22px;
@@ -103,10 +107,6 @@
     font-size: 10px;
     font-weight: 500;
     line-height: 14px;
-
-    &:hover &__content {
-      visibility: visible;
-    }
 
     // left arrow
     &::after {
